[project]
name = "MiniCascade-RAG"
version = "0.1.0"
description = "Build for Enterprise-level RAG System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asgiref>=3.9.1",
    "bcrypt>=4.3.0",
    "bytewax>=0.21.1",
    # "docling>=2.15.1",
    "dashscope>=1.24.1",
    "fastapi>=0.115.12",
    "fastmcp",
    # "flagembedding>=1.3.5",
    "gradio>=5.31.0",
    "httpx[socks]>=0.28.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-openai>=0.3.18",
    "langchain-tavily>=0.2.1",
    "langfuse>=3.2.1",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-postgres>=2.0.23",
    "langgraph-cli[inmem]>=0.4.0",
    "llama-index>=0.12.37",
    "markitdown>=0.1.2",
    "modelscope>=1.29.1",
    "notebook>=7.4.3",
    "openevals>=0.1.0",
    "opik>=1.7.28",
    "pika>=1.3.2",
    "psycopg[binary,pool]>=3.2.9",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pymilvus>=2.5.10",
    "pymongo>=4.13.0",
    "python-jose[cryptography]>=3.5.0",
    "qdrant-client>=1.14.2",
    "ragas>=0.3.0",
    "redis>=6.4.0",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.1.0",
    "sqlmodel>=0.0.24",
    "structlog>=25.3.0",
    # "unstructured>=0.17.2",
    "timescaledb>=0.0.4",
    "transformers>=4.54.1",
]




[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]

[tool.ruff]
# Set the maximum line length to 121.
line-length = 121

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501"]

